Notification & Distribution List Implementation (#2)
