# docs/openapi.yaml
@@ -2,34 +2,29 @@ openapi: 3.1.0
 info:
   title: Notifique API Spec
   version: 0.1.0
+  license:
+    name: MIT
+    identifier: MIT License
 paths:
   /notifications:
     get:
-      summary: Gets the user's notifications.
+      summary: |
+        Gets the user's in-app notifications
+      tags:
+        - notifications
       parameters:
         - in: query
-          name: take
+          name: pageSize
           description: |
-            The number of notifications to take (used for pagination).
+            The number of notifications to retrieve.
           schema:
             type: integer
         - in: query
-          name: skip
+          name: page
           description: |
-            Skips the top N newest notifications (used for pagination).
+            Page number
           schema:
             type: integer
-        - in: query
-          name: channels
-          description: |
-            Selects notifications whose delivery channel are at the very
-            least the ones specified here. To specify multiple channels
-            use the "channels=e-mail&channels=in-app" format.
-          schema:
-            type: array
-            uniqueItems: true
-            items:
-              $ref: '#/components/schemas/Channel'
         - in: query
           name: topics
           description: |
@@ -47,12 +42,16 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NotificationResponse'
-        "500":
-          description: |
-            Failed to retrieve the user's notifications.
+                allOf:
+                  - $ref: '#/components/schemas/PageResponse'
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/UserNotification'
     post:
       summary: Creates a new notification.
+      tags:
+        - notifications
       requestBody:
         required: true
         content:
@@ -65,14 +64,45 @@ paths:
         "400":
           description: |
             Topic is not a string or doesn't comply with the specified constraints.
-        "500":
-          description: |
-            Failed to persist the notification. If a channel fails to deliver
-            a message it won't trigger an error.
+            Distribution list doesn' exists.
 
-  /notifications/{id}/read:
-    put:
+  /notifications/config:
+    get:
+      summary: Get the user's notification configuration
+      tags:
+        - notifications
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserConfig'
+    patch:
+      summary: Update the user's notification configuration.
+      tags:
+        - notifications
+      description: |
+        Updates the user's notification configuration.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserConfig'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: |
+            If the supplied channel is not a valid channel.
+            If the snoozed at parameter is on the past.
+
+  /notifications/{id}:
+    patch:
       summary: Updates the notification's read status.
+      tags:
+        - notifications
       parameters:
         - in: path
           name: id
@@ -80,47 +110,161 @@ paths:
             type: string
             format: uuid
             required: true
+      responses:
+        "404":
+          description: |
+            If the notification doesn't exists.
+        "200":
+          description: Ok
 
-  /notifications/opt-in:
-    put:
+  /distribution-lists:
+    post:
+      summary: |
+        Creates a new distribution list.
+      tags:
+        - distribution list
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: array
-              minItems: 1
-              uniqueItems: true
-              items:
-                $ref: '#/components/schemas/Channel'
-      description: |
-        Enables notifications of the supplied type through the
-        supplied channels for the user who made the request.
+              $ref: '#/components/schemas/DistributionList'
+      responses:
+        "400":
+          description: |
+            The distribution list already exists.
+        "201":
+          description: |
+            The distribution list was created successfully.
+    get:
+      summary: |
+        Gets the available distribution lists with their number of recipients.
+      tags:
+        - distribution list
+      parameters:
+        - in: query
+          name: pageSize
+          description: |
+            The number of distributed lists to retrieve.
+          schema:
+            type: integer
+        - in: query
+          name: page
+          description: |
+            Page number
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/PageResponse'
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/DistributionListSummary'
 
-  /notifications/opt-out:
-    put:
+  /distribution-lists/{name}/recipients:
+    get:
+      summary: |
+        Gets the users of the distribution list.
+      tags:
+        - distribution list
+      parameters:
+        - in: path
+          name: name
+          schema:
+            $ref: '#/components/schemas/DistributionListName'
+        - in: query
+          name: pageSize
+          description: |
+            The number of users to retrieve.
+          schema:
+            type: integer
+        - in: query
+          name: page
+          description: |
+            Page number.
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/PageResponse'
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/UserIdList'
+        "404":
+          description: The distribution list doesn't exists
+
+    patch:
+      summary: |
+        Adds new users to the distribution list.
+      tags:
+        - distribution list
+      parameters:
+        - in: path
+          name: name
+          schema:
+            $ref: '#/components/schemas/DistributionListName'
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: array
-              minItems: 1
-              uniqueItems: true
-              items:
-                $ref: '#/components/schemas/Channel'
-      description: |
-        Disables notifications of the supplied type through the
-        supplied channels for the user who made the request.
+              $ref: '#/components/schemas/UserIdList'
+      responses:
+        "204":
+          description: Users added successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DistributionListSummary'
+        "400":
+          description: The distribution list doesn't exists
+
+    delete:
+      summary: |
+        Deletes users from the distribution list.
+      tags:
+        - distribution list
+      parameters:
+        - in: path
+          name: name
+          schema:
+            $ref: '#/components/schemas/DistributionListName'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserIdList'
+      responses:
+        "200":
+          description: Users deleted successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DistributionListSummary'
+        "400":
+          description: The distribution list doesn't exists
 
 components:
+
   schemas:
 
     Topic:
       type: string
       minLength: 1
       maxLength: 64
-      pattern: '[A-Za-z0-9@#$]*'
 
     Channel:
        type: string
@@ -128,6 +272,25 @@ components:
          - e-mail
          - sms
          - in-app
+
+    Priority:
+      type: string
+      enum:
+        - HIGH
+        - MEDIUM
+        - LOW
+
+    UserId:
+      type: string
+      minLenght: 1
+
+    UserIdList:
+      type: array
+      uniqueItems: true
+      description: array of user ids
+      maxItems: 256
+      items:
+        $ref: '#/components/schemas/UserId'
 
     Notification:
       type: object
@@ -144,25 +307,29 @@ components:
         topic:
           $ref: '#/components/schemas/Topic'
         recipients:
-          type: array
-          uniqueItems: true
-          description: array of user ids
-          items:
-            type: string
+          $ref: '#/components/schemas/UserIdList'
+        distributionList:
+          $ref: '#/components/schemas/DistributionListName'
         channels:
            type: array
            uniqueItems: true
            description: array of delivery channels
            items:
             $ref: '#/components/schemas/Channel'
+        priority:
+          $ref: '#/components/schemas/Priority'
       required:
         - title
         - contents
         - topic
+        - priority
 
-    NotificationResponse:
+    UserNotification:
       type: object
       properties:
+        id:
+          type: string
+          format: uuid
         title:
           type: string
         contents:
@@ -175,31 +342,75 @@ components:
           format: date-time
         topic:
           $ref: '#/components/schemas/Topic'
-        status:
-          type: string
-          enum:
-            - pending
-            - processing
-            - success
-            - failed
-        channels:
-           type: array
-           uniqueItems: true
-           description: array of delivery channels
-           items:
-            $ref: '#/components/schemas/Channel'
       required:
+        - id
         - title
         - contents
         - topic
         - created_at
-        - type
 
-  responses:
+    ChannelConfig:
+      type: object
+      properties:
+        channel:
+          $ref: '#/components/schemas/Channel'
+        optIn:
+          type: boolean
+        snoozeUntil:
+          type: string
+          format: date-time
+      required:
+        - channel
 
-    Notification:
-      description: Notification's contents for in-app display.
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/NotificationResponse'
+    UserConfig:
+      type: object
+      properties:
+        config:
+          type: array
+          uniqueItems: true
+          description: |
+            Describes the user's configuration on the notification
+            system.
+          items:
+            $ref: '#/components/schemas/ChannelConfig'
+
+    DistributionListName:
+      type: string
+      minLength: 1
+      maxLength: 120
+      pattern: '[A-Za-z0-9$#@-_]+'
+
+    DistributionList:
+      type: object
+      properties:
+        name:
+          $ref: '#/components/schemas/DistributionListName'
+        recipients:
+          $ref: '#/components/schemas/UserIdList'
+
+    DistributionListSummary:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          $ref: '#/components/schemas/DistributionListName'
+        numberOfRecipients:
+          type: number
+    
+    PageResponse:
+      type: object
+      properties:
+        currentPage:
+          type: integer
+        nextPage:
+          type: integer
+          nullable: true
+        prevPage:
+          type: integer
+          nullable: true
+        totalPages:
+          type: integer
+        totalRecords:
+          type: integer
